fixed social media icons bug on mobile

--- a/style.css
+++ b/style.css
@@ -311,7 +311,7 @@ header .social_media a img {
 	}
 
 	header .social_media a img {
-		padding: 10px;
+		padding: 0px;
 		padding-bottom: 0px;
 		width: 25px;
 		height: 25px;
